src/objects/DebtRecoveryProcess__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Debt Recovery Process</relationshipLabel>
        <relationshipName>DebtRecoveryProcess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debt_Recovery_Profile__c</fullName>
        <formula>TEXT(Contract__r.DebtRecoveryProfile__c)</formula>
        <label>Debt Recovery Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvaulateForDebtRecovery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaulate For Debt Recovery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentDueDate__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Debt Recovery Process</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Debt Recovery Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debt Recovery Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>